fix(plugins/plugin-client-common): breadcrumb fonts can be too large, and double zoom
Fixes #4519

--- a/plugins/plugin-client-common/web/css/static/sidecar-main.css
+++ b/plugins/plugin-client-common/web/css/static/sidecar-main.css
@@ -397,6 +397,7 @@
   display: flex;
   align-items: center;
   overflow-x: hidden;
+  font-size: 0.875em;
 
   .sidecar-bottom-stripe-button:first-child {
     margin-left: 0.5em;
